force-app/main/default/objects/Claim__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>