force-app/main/default/objects/Claim__c/fields/Is_Special_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MX (High-value validation)</description>
    <label>Special Coverage</label>
    <type>Checkbox</type>
</CustomField>