force-app/main/default/objects/Claim__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>US (Validation)</description>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>