force-app/main/default/objects/Claim__c/fields/Total_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Tax__c</fullName>
    <description>All (Final Amount)</description>
    <label>Total With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>